added responsive design for navbar

--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -1,13 +1,21 @@
 <nav class="navbar">
     <div class="container">
-        <a href="#">
-            HopIn
-        </a>
+        <div class="navbar-header">
+            <a href="#">
+                HopIn
+            </a>
+
+            <button class="navbar-toggler" data-toggle="open-navbar1">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+            </button>
+        </div>  
   
       <div class="navbar-menu" id="open-navbar1">
-        <div>
+        <div class="navbar-nav">
           <a href="#">Log in</a>
-          <a href="#" id="signUp">Sign up</a>
+          <a href="#" id="signUp">Sign up</a>  
         </div>
       </div>
     </div>
