--- a/HopIn/src/app/toolbar/toolbar.component.css
+++ b/HopIn/src/app/toolbar/toolbar.component.css
@@ -84,7 +84,17 @@ a {
     font-weight: lighter;
 }
 
-.container > a {
+.navbar-menu a:hover {
+    color: black;
+}
+
+
+.navbar-header {
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+}
+
+.container .navbar-header a {
     text-decoration: none;
     height: fit-content;
     font-weight: 500;
@@ -95,11 +105,71 @@ a {
     padding-left: 1.5rem;
 }
 
-#signUp {
+
+.navbar-toggler {
+    /* border-radius: 5px; */
+    /* background-color: transparent; */
+    cursor: pointer;
+    border: none;
+    display: none;
+    outline: none;
+    padding-right: 1.5rem;
+}
+
+.navbar-toggler > div {
+    width: 33px;
+    height: 3px;
     background-color: white;
-    color: #1E4A5A;
-    border-radius: 12%;
-    padding: 0.3rem 0.6rem;
+    margin: 6px 0;
+}
+
+  @media screen and (min-width: 768px) {
+    #signUp {
+        background-color: white;
+        color: #1E4A5A;
+        border-radius: 12%;
+    }
+    
+    #signUp:hover {
+        background-color: black;
+    }
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .navbar-toggler {
+        display: block;
+        background-color: #1E4A5A;
+    }
+
+    .navbar-header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .navbar-menu {
+        display: none;
+        text-align: center;
+        padding: 0;
+        border-bottom: 2px solid #1E4A5A;
+    }
+
+    .navbar-nav {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        border-top: 1px solid #EEE;
+        margin-top: 1rem;
+    }
+
+    .navbar-menu a {
+        background-color:white;
+        color: #1E4A5A;
+    }
 }
 
 
