--- a/HopIn/src/app/toolbar/toolbar.component.css
+++ b/HopIn/src/app/toolbar/toolbar.component.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
+/* GENERAL */
 nav {
     font-family: 'Poppins', sans-serif;
     font-size: 0.725rem;
@@ -10,6 +11,7 @@ a {
     text-decoration: none;
 }
 
+/* CONTAINER */
 .navbar,
 .navbar > .container {
   width: 100%;
@@ -22,15 +24,13 @@ a {
   }
 }
 
-
 .navbar {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     background-color: #1E4A5A;
     /* padding: 0rem 1.15rem; */
     border-bottom: 1px solid #eceef3;
 }
-
-  
+ 
 .navbar.container {
     @media (min-width: 576px) {
         max-width: 540px;
@@ -46,49 +46,8 @@ a {
       }
 }
 
-.navbar-menu {
-    display: flex;
-    flex-basis: auto;
-    flex-grow: 1;
-    padding-right: 1.5rem;
-    flex-direction: row-reverse;
 
-    @media (max-width: 768px) {
-      display: none;
-      text-align: center;
-    }
-}
-
-
-.navbar-nav {
-    margin-left: auto;
-    flex-direction: row;
-    display: flex;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-
-    @media (max-width: 768px) {
-      width: 100%;
-      display: block;
-      border-top: 1px solid #EEE;
-      margin-top: 1rem;
-    }
-}
-
-.navbar-menu  a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 0.5rem 0.5rem;
-    color: white;
-    font-weight: lighter;
-}
-
-.navbar-menu a:hover {
-    color: black;
-}
-
-
+/* NAVBAR_HEADER */
 .navbar-header {
     padding-top: 0.8%;
     padding-bottom: 0.8%;
@@ -106,9 +65,44 @@ a {
 }
 
 
+
+
+/* NAVBAR-MENU ALL ITEMS */
+.navbar-menu {
+    display: flex;
+    flex-basis: auto;
+    flex-grow: 1;
+    padding-right: 1.5rem;
+    flex-direction: row-reverse;
+
+    @media (max-width: 768px) {
+      display: none;
+      text-align: center;
+    }
+}
+
+.navbar-nav {
+    margin-left: auto;
+    flex-direction: row;
+    display: flex;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.navbar-menu  a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 0.5rem 0.5rem;
+    color: white;
+    font-weight: lighter;
+}
+
+.navbar-menu a:hover {
+    color: black;
+}
+
 .navbar-toggler {
-    /* border-radius: 5px; */
-    /* background-color: transparent; */
     cursor: pointer;
     border: none;
     display: none;
@@ -123,7 +117,13 @@ a {
     margin: 6px 0;
 }
 
-  @media screen and (min-width: 768px) {
+
+
+
+/* SCREEN DIFFERENCE */
+
+/* signUp button */
+@media screen and (min-width: 700px) {
     #signUp {
         background-color: white;
         color: #1E4A5A;
@@ -137,7 +137,7 @@ a {
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
     .navbar-toggler {
         display: block;
         background-color: #1E4A5A;
