--- a/HopIn/src/app/toolbar/toolbar.component.css
+++ b/HopIn/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
 
 /* GENERAL */
 nav {
@@ -61,7 +61,7 @@ a {
     color: white;
     padding-top: 0.8%;
     padding-bottom: 0.8%;
-    padding-left: 1.5rem;
+    padding-left: 1rem;
 }
 
 
@@ -72,7 +72,7 @@ a {
     display: flex;
     flex-basis: auto;
     flex-grow: 1;
-    padding-right: 1.5rem;
+    padding-right: 1rem;
     flex-direction: row-reverse;
 
     @media (max-width: 768px) {
