--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -1,1 +1,43 @@
-<p>register works!</p>
+<div class="form-container">
+  <div class="reg-left">
+    <h1 class="title">Create account</h1>
+
+    <form [formGroup]="registerForm" fxLayout="column">
+      <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input matInput type="text" name="name" formControlName="name" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Surname</mat-label>
+        <input matInput type="text" name="surname" formControlName="surname" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput type="email" name="email" formControlName="email" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" name="password" formControlName="password" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Confirm password</mat-label>
+        <input matInput type="password" name="conf-password" formControlName="conf-password" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>City</mat-label>
+        <input matInput type="text" name="city" formControlName="city" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Phone number</mat-label>
+        <input matInput type="tel" name="phonenum" formControlName="phonenum" />
+      </mat-form-field>
+      <div fxLayout="row" fxLayoutAlign="space-between end">
+        <button class="conf-button" type="submit" mat-raised-button>Register</button>
+      </div>
+    </form>
+  </div>
+  <div class="reg-illustartion">
+
+  </div>
+</div>
+
