--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+
 body {
     margin: 0;
+    background-color: #F9F9F9;
 }
+html, body { height: 100%; }
