--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -37,7 +37,7 @@
     </form>
   </div>
   <div class="reg-illustartion">
-    <img src="../../assets/vectors/register.svg" height="60%" alt="">
+    <img src="../../assets/vectors/register.svg" height="450px" alt="">
   </div>
 </div>
 
