--- a/HopIn/src/app/register/register.component.css
+++ b/HopIn/src/app/register/register.component.css
@@ -12,29 +12,34 @@ mat-form-field {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1fr;
-    width: 70%;
+    width: 65%;
     height: fit-content;
-    padding: 15px 30px;
+    padding: 15px 15px;
     background-color: white;
     border-radius: 10px;
     border: 1px solid #E6E6E6;
     margin: 30px auto;
+    align-items: center;
 }
 
 .reg-left {
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-right: 2px solid #E6E6E6;
 }
 
 
 mat-form-field {
-    width: 60%;
+    width: 70%;
     height: 45px;
     display: block;
     margin: auto;
     margin-top: 25px;
 }
 
-.title { 
+.title {
+    margin-top: 0px;
     color: #383838;
     font-weight: bold;
 }
@@ -45,12 +50,16 @@ mat-form-field {
    font-weight: 200 !important;
    font-size: 1em;
    padding: 5px 40px;
-   margin-top: 25px;
+   margin-top: 40px;
    border-radius: 5px;
 }
 
-.reg-illustration {
+.reg-illustartion {
+    text-align: center;
+
 }
 
-.reg-illustration img{
+.reg-illustartion img{
+    display: inline-block;
+    margin: auto;
 }
