--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="reg-left">
     <h1 class="title">Create account</h1>
 
-    <form [formGroup]="registerForm" fxLayout="column">
+    <form [formGroup]="registerForm" (ngSubmit)="register()" fxLayout="column">
       <mat-form-field>
         <mat-label>Name</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
@@ -21,7 +21,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
-        <input matInput type="password" name="conf-password" formControlName="conf-password" />
+        <input matInput type="password" name="conf-password" formControlName="confpass" />
       </mat-form-field>
       <mat-form-field>
         <mat-label>City</mat-label>
