--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -18,6 +18,7 @@
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" name="password" formControlName="password" />
+        <mat-icon matSuffix>visibility</mat-icon>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
