hid required asterisks

--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <h1 class="title">Create account</h1>
 
     <form [formGroup]="registerForm" (ngSubmit)="register()" fxLayout="column">
-      <mat-form-field>
+      <mat-form-field [hideRequiredMarker]="true">
         <mat-label>Name</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
       </mat-form-field>
@@ -18,7 +18,7 @@
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" name="password" formControlName="password" />
-        <mat-icon matSuffix>visibility</mat-icon>
+        <!-- <mat-icon matSuffix>visibility</mat-icon> -->
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
