--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -6,31 +6,39 @@
       <mat-form-field [hideRequiredMarker]="true">
         <mat-label>Name</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
+        <mat-error *ngIf="registerForm.get('name')?.errors?.['required']">entering name is required</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Surname</mat-label>
         <input matInput type="text" name="surname" formControlName="surname" />
+        <mat-error *ngIf="registerForm.get('surname')?.errors?.['required']">entering surname is required</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="email" name="email" formControlName="email" />
+        <mat-error *ngIf="registerForm.get('email')?.errors?.['required']">entering email is required</mat-error>
+        <mat-error *ngIf="registerForm.get('email')?.errors?.['email']">invalid email format</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" name="password" formControlName="password" />
+        <mat-error *ngIf="registerForm.get('password')?.errors?.['required']">entering password is required</mat-error>
         <!-- <mat-icon matSuffix>visibility</mat-icon> -->
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
         <input matInput type="password" name="conf-password" formControlName="confpass" />
+        <mat-error *ngIf="registerForm.get('confpass')?.errors?.['required']">confirming password is required</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>City</mat-label>
         <input matInput type="text" name="city" formControlName="city" />
+        <mat-error *ngIf="registerForm.get('city')?.errors?.['required']">entering city is required</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Phone number</mat-label>
         <input matInput type="tel" name="phonenum" formControlName="phonenum" />
+        <mat-error *ngIf="registerForm.get('phonenum')?.errors?.['required']">entering phone number is required</mat-error>
       </mat-form-field>
       <div fxLayout="row" fxLayoutAlign="space-between end">
         <button class="conf-button" type="submit" mat-raised-button>Register</button>
