--- a/HopIn/src/app/register/register.component.css
+++ b/HopIn/src/app/register/register.component.css
@@ -4,7 +4,7 @@ mat-form-field {
     display: inline-block;
 }
 
-* {
+body {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -30,7 +30,7 @@ mat-form-field {
     margin-top: 20px;
     margin-bottom: 20px;
     border-right: 2px solid #E6E6E6;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 
@@ -39,8 +39,9 @@ mat-form-field {
     height: 45px;
     display: block;
     margin: auto;
-    margin-top: 25px;
-    padding: 5px 0px;
+    margin-top: 30px;
+    padding: 0;
+    font-size: 14px;
 }
 
 .mat-form-field-wrapper {
@@ -61,9 +62,9 @@ mat-form-field {
    background-color: #1E4A5A !important;
    color: white;
    font-weight: 200 !important;
-   font-size: 1em;
+   font-size: 14px;
    padding: 5px 40px;
-   margin-top: 40px;
+   margin-top: 25px;
    border-radius: 5px;
 }
 
