--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -23,7 +23,6 @@
         <mat-label>Password</mat-label>
         <input matInput type="password" name="password" formControlName="password" />
         <mat-error *ngIf="registerForm.get('password')?.errors?.['required']">entering password is required</mat-error>
-        <!-- <mat-icon matSuffix>visibility</mat-icon> -->
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
@@ -43,6 +42,7 @@
       <div fxLayout="row" fxLayoutAlign="space-between end">
         <button class="conf-button" type="submit" mat-raised-button>Register</button>
       </div>
+      <mat-checkbox>check</mat-checkbox>
     </form>
   </div>
   <div class="reg-illustartion">
