--- a/HopIn/src/custom-theme.scss
+++ b/HopIn/src/custom-theme.scss
@@ -41,11 +41,44 @@ $dark-blue: (
     )
 );
 
+$lighter-blue: (
+    50: #f5fafb,
+    100: #d1e7ef,
+    200: #acd4e3,
+    300: #88c1d6,
+    400: #3f9bbd,
+    500: #337d98,
+    600: #275f73,
+    700: #1a414f,
+    800: #0e232a,
+    900: #000000,
+    A100: #f5fafb,
+    A200: #d1e7ef,
+    A400: #acd4e3,
+    A700: #88c1d6,
+    contrast: (
+        50: black,
+        100: black,
+        200: black,
+        300: black,
+        400: black,
+        500: white,
+        600: white,
+        700: white,
+        800: white,
+        900: white,
+        A100: black,
+        A200: black,
+        A400: black,
+        A700: white,
+    )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $HopIn-primary: mat.define-palette($dark-blue);
-$HopIn-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$HopIn-accent: mat.define-palette($lighter-blue);
 
 // The warn palette is optional (defaults to red).
 $HopIn-warn: mat.define-palette(mat.$red-palette);
