--- a/HopIn/src/app/register/register.component.css
+++ b/HopIn/src/app/register/register.component.css
@@ -12,7 +12,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1fr;
-    width: 65%;
+    width: 55%;
     height: fit-content;
     padding: 15px 15px;
     background-color: white;
@@ -35,13 +35,18 @@ body {
 
 
 mat-form-field {
-    width: 70%;
+    width: 80%;
     height: 45px;
     display: block;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 22px;
     padding: 0;
-    font-size: 14px;
+    font-size: 12px;
+}
+
+mat-error {
+    margin-top: -2px;
+    font-size: 11px;
 }
 
 .mat-form-field-wrapper {
@@ -61,10 +66,10 @@ mat-form-field {
 .conf-button {
    background-color: #1E4A5A !important;
    color: white;
-   font-weight: 200 !important;
+   font-weight: 400 !important;
    font-size: 14px;
-   padding: 5px 40px;
-   margin-top: 25px;
+   padding: 0px 30px;
+   margin-top: 20px;
    border-radius: 5px;
 }
 
