--- a/HopIn/src/custom-theme.scss
+++ b/HopIn/src/custom-theme.scss
@@ -74,6 +74,39 @@ $lighter-blue: (
     )
 );
 
+$darker-red: (
+    50: #edd2d1,
+    100: #dca5a3,
+    200: #ca7975,
+    300: #b94c47,
+    400: #b03630,
+    500: #a8201a,
+    600: #861914,
+    700: #54100d,
+    800: #320907,
+    900: #000000,
+    A100: #edd2d1,
+    A200: #dca5a3,
+    A400: #ca7975,
+    A700: #b94c47,
+    contrast: (
+        50: black,
+        100: black,
+        200: black,
+        300: black,
+        400: black,
+        500: white,
+        600: white,
+        700: white,
+        800: white,
+        900: white,
+        A100: black,
+        A200: black,
+        A400: black,
+        A700: white,
+    )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -81,7 +114,7 @@ $HopIn-primary: mat.define-palette($dark-blue);
 $HopIn-accent: mat.define-palette($lighter-blue);
 
 // The warn palette is optional (defaults to red).
-$HopIn-warn: mat.define-palette(mat.$red-palette);
+$HopIn-warn: mat.define-palette($darker-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
