--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -26,8 +26,9 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
-        <input matInput type="password" name="conf-password" formControlName="confpass" />
+        <input matInput type="password" name="conf-password" formControlName="confpass" [errorStateMatcher]="confirmValidParentMatcher"/>
         <mat-error *ngIf="registerForm.get('confpass')?.errors?.['required']">confirming password is required</mat-error>
+        <mat-error *ngIf="registerForm.errors?.['passwordMismatchError']">passwords don't match</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>City</mat-label>
