--- a/HopIn/src/app/login/login.component.html
+++ b/HopIn/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div id="login-container">
     <div id="form-container">
         <h3>Welcome back</h3>
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
             <mat-form-field >
                 <mat-label>Email</mat-label>
                 <input matInput type="email" name="email" formControlName="email" />
