--- a/HopIn/src/app/login/login.component.css
+++ b/HopIn/src/app/login/login.component.css
@@ -30,14 +30,10 @@
     color: #383838;
 }
 
-h3 {
-    display: block;
-    width: 100%;
-    margin-top: 12px;
-    margin-bottom: 0px;
+.title {
+    margin-top: 0px;
     color: #383838;
-    font-size: 23px;
-    font-weight: bold;
+    font-weight: 700;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -47,15 +43,15 @@ mat-form-field {
     height: 65px;
     margin: auto;
     margin-top: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
 }
 
-.mat-error {
-    margin-top: -1.5px;
-}
 
 .mat-checkbox {
     display: block;
-    margin-top: 5px;
+    margin-top: 9px;
+    margin-bottom: 10px;
     color: #383838;
     font-size: 0.8em;
     font-family: 'Poppins', sans-serif;
@@ -65,7 +61,7 @@ mat-form-field {
 button{
     display: flex;
     height: 35px;
-    margin: 10px auto;
+    margin: 10px auto 3px auto;
     border-radius: 5px;
     padding: 4px 35px;
     align-items: center;
@@ -78,8 +74,8 @@ button{
 #forgotten-password-ref{
     display: block;
     width: 100%;
-    margin: 4px 0px;
-    font-size: 9px;
+    margin-bottom: 4px;
+    font-size: 11px;
     color: #A8201A;
     text-decoration: none;
 }
@@ -99,6 +95,8 @@ p {
     font-size: 12px;
     color: #EC9A29;
     text-decoration: none;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 #register-ref:hover{
@@ -115,6 +113,11 @@ p {
     display: inline-block;
     margin: auto;
     height: 275px;
+}
+
+mat-error {
+    margin-top: -1.5px;
+    font-size: 11px;
 }
 
 @media screen and (max-width: 1000px) {
