--- a/HopIn/src/app/login/login.component.html
+++ b/HopIn/src/app/login/login.component.html
@@ -1,15 +1,18 @@
 <div id="login-container">
     <div id="form-container">
-        <h3>Welcome back</h3>
+        <h1 class="title">Welcome back</h1>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
             <mat-form-field >
                 <mat-label>Email</mat-label>
                 <input matInput type="email" name="email" formControlName="email" />
+                <mat-error *ngIf="loginForm.get('email')?.errors?.['required']">entering email is required</mat-error>
+                <mat-error *ngIf="loginForm.get('email')?.errors?.['email']">invalid email format</mat-error>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Password</mat-label>
                 <mat-icon id="eye-icon" matSuffix (click)="isVisible = !isVisible">{{isVisible ? 'visibility' : 'visibility_off'}}</mat-icon>
                 <input matInput [type]="isVisible? 'text' : 'password'" name="password" formControlName="password" />
+                <mat-error *ngIf="loginForm.get('password')?.errors?.['required']">entering password is required</mat-error>
             </mat-form-field>
             <mat-checkbox color="primary">Remember me</mat-checkbox>
         </form>
