added component routing

--- a/HopIn/src/app/login/login.component.html
+++ b/HopIn/src/app/login/login.component.html
@@ -19,7 +19,7 @@
         <button mat-raised-button type="submit">Log In</button>
         <a id="forgotten-password-ref" href="#">Forgot password?</a>
         <p>
-            New and wanna hop in? <a id="register-ref" href="#">Register!</a>
+            New and wanna hop in? <a id="register-ref" [routerLink]="['/register']">Register!</a>
         </p>
     </div>
     <div id="img-container">
