--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -18,8 +18,8 @@
             <a href="#" *ngIf="role === 'USER'">Account</a>
             <a href="#" *ngIf="role === 'USER'">History</a>
             <a href="#" *ngIf="role === 'USER'">Log out</a>
-            <a href="#" *ngIf="role === null">Log in</a>
-            <a href="#" id="signUp" *ngIf="role === null">Sign up</a>  
+            <a href="#" *ngIf="role === null" [routerLink]="['/login']">Log in</a>
+            <a href="#" id="signUp" *ngIf="role === null" [routerLink]="['/register']">Sign up</a>  
         </div>
       </div>
     </div>
