moved shared component styles to global css

--- a/HopIn/src/app/register/register.component.css
+++ b/HopIn/src/app/register/register.component.css
@@ -1,17 +1,12 @@
-
-
-/* mat-form-field {
-    display: inline-block;
-} */
-
-body {
-    font-family: 'Poppins', sans-serif;
-}
-
 .form-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1fr;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 55%;
     height: fit-content;
     padding: 5px 15px;
@@ -20,18 +15,11 @@ body {
     border: 1px solid #E6E6E6;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 10px;
+    margin-top: 40px !important;
     margin-bottom: 20px;
     align-items: center;
 }
 
-/* ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
-    padding: 0px;
-} */
-
-#name input {
-    height: 50px;
-}
 
 .reg-left {
     text-align: center;
@@ -39,46 +27,6 @@ body {
     margin-bottom: 10px;
     border-right: 2px solid #E6E6E6;
     /* font-size: 13px; */
-}
-
-
-mat-form-field {
-    width: 80%;
-    height: 45px;
-    display: block;
-    margin: auto;
-    margin-top: 22px;
-    padding: 0;
-    font-size: 12px;
-}
-
-mat-error {
-    margin-top: -1.5px;
-    font-size: 11px;
-}
-
-.mat-form-field-wrapper {
-    height: 50px !important;
-}
-
-.mat-form-field-subscript-wrapper {
-    margin-top: 2px !important;
-}
-
-.title {
-    margin-top: 0px;
-    color: #383838;
-    font-weight: 700;
-}
-
-.conf-button {
-   background-color: #1E4A5A !important;
-   color: white;
-   font-weight: 400 !important;
-   font-size: 14px;
-   padding: 0px 30px;
-   margin-top: 20px;
-   border-radius: 5px;
 }
 
 .reg-illustartion {
@@ -91,18 +39,15 @@ mat-error {
     margin: auto;
 }
 
-/* input.ng-invalid.ng-touched {
-    border-color: aqua;
-} */
 
 @media screen and (max-width: 1200px) {
     .reg-illustartion img {
-        height: 350px;
+        height: 300px;
     }
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
     .reg-illustartion {
         display: none;
     }
