--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -1,9 +1,9 @@
 <div class="form-container">
   <div class="reg-left">
-    <h1 class="title">Create account</h1>
+    <h2 class="title">Create account</h2>
 
     <form [formGroup]="registerForm" (ngSubmit)="register()" fxLayout="column">
-      <mat-form-field [hideRequiredMarker]="true">
+      <mat-form-field [hideRequiredMarker]="true" id="name">
         <mat-label>Name</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
         <mat-error *ngIf="registerForm.get('name')?.errors?.['required']">entering name is required</mat-error>
