--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -5,5 +5,58 @@ body {
     margin: 0;
     background-color: #F9F9F9;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: "Poppins" sans-serif; }
+
+html, body { height: 100%; margin: 0; font-family: "Poppins", sans-serif; }
+
+
+.title {
+    margin-top: 0px;
+    color: #383838;
+    font-weight: 700;
+    font-size: 1.7em;
+    margin-bottom: 0px;
+}
+
+.mat-form-field {
+    width: 80%;
+    height: 45px;
+    display: block;
+    margin: auto;
+    margin-top: 22px;
+    padding: 0;
+    font-size: 12px;
+}
+
+.mat-form-field-wrapper {
+    height: 50px !important;
+}
+
+.mat-form-field-subscript-wrapper {
+    margin-top: 2px !important;
+}
+
+
+.mat-error {
+    margin-top: -1.5px;
+    font-size: 11px;
+}
+
+
+.mat-icon {
+    font-family: 'Material Icons'; 
+}
+
+/* ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0px;
+} */
+
+.conf-button {
+    background-color: #1E4A5A !important;
+    color: white;
+    font-weight: 400 !important;
+    font-size: 14px;
+    padding: 0px 30px !important;
+    margin-top: 25px !important;
+    border-radius: 5px;
+ }
+ 
