--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -63,4 +63,10 @@ html, body { height: 100%; margin: 0; font-family: "Poppins", sans-serif; }
     margin-top: 25px !important;
     border-radius: 5px;
  }
+
+ /* COLORS */
+
+ .dark-blue {
+    color: #1E4A5A;
+ }
  
