--- a/HopIn/src/app/landing/landing.component.html
+++ b/HopIn/src/app/landing/landing.component.html
@@ -1,44 +1,55 @@
-<div id="passanger-container">
-    <div id="passanger-left">
-        <div id="pass-illustartion">
-            <img src="../../assets/vectors/order-ride.svg" height="310px" alt="">
+<div id="content">
+    <div id="passanger-container">
+        <div id="passanger-left">
+            <div id="pass-illustartion">
+                <img src="../../assets/vectors/order-ride.svg" height="310px" alt="">
+              </div>
+            <div id="pass-prompt">
+                <h1 class="big-prompt">Need a safe, quick<br>and pleasant ride?</h1>
+                <p class="subtitle">Sign up as a <span class="orange">passenger</span> on HopIn and enjoy our services anywhere, anytime.</p>
+                <button class="long-button" mat-raised-button>proceed to sign up -></button>
+            </div>
+        </div>
+        <div id="passanger-right">
+            <div>
+                <h2 class="smaller-prompt">Not sure if we can offer<br>you a good deal?</h2>
+                <p class="subtitle">Check out our map and see the cost and duration of the ride we got waiting for you!</p>
+                <button class="conf-button back-orange" mat-raised-button>go to the map</button>
+            </div>
+        </div>
+    </div>
+    
+    <div id="driver-container">
+        <div id="driver-prompt">
+            <h1 class="big-prompt">Got a car and wanna<br>chauffeur others?</h1>
+            <p class="subtitle">Sign up as a <span class="orange">driver</span> on HopIn and  help us to provide great value for everyone.</p>
+            <button class="long-button" mat-raised-button>request sign up -></button>
+        </div>
+        <div id="driver-illustartion">
+            <img src="../../assets/vectors/driver.svg" height="310px" alt="">
           </div>
-        <div id="pass-prompt">
-            <h1 class="big-prompt">Need a safe, quick<br>and pleasant ride?</h1>
-            <p class="subtitle">Sign up as a <span class="orange">passenger</span> on HopIn and enjoy our services anywhere, anytime.</p>
-            <button class="long-button" mat-raised-button>proceed to sign up -></button>
+        <div id="driver-offer">
+            <h2 class="smallest-prompt">We offer you:</h2>
+            <ul class="no-bullets">
+                <li><mat-icon>watch_later</mat-icon>flexible hours</li>
+                <li><mat-icon>money</mat-icon>90% of revenue</li>
+                <li><mat-icon>mode_comment</mat-icon>live support 24/7</li>
+            </ul>
         </div>
     </div>
-    <div id="passanger-right">
-        <div>
-            <h2 class="smaller-prompt">Not sure if we can offer<br>you a good deal?</h2>
-            <p class="subtitle">Check out our map and see the cost and duration of the ride we got waiting for you!</p>
-            <button class="conf-button back-orange" mat-raised-button>go to the map</button>
-        </div>
+    
+    <div id="about-us">
+        <h2 class="title dark-blue">About us</h2>
+        <p class="subtitle">Lorem ipsum dolor sit amet consectetur. Sed metus risus amet at at tellus quis aenean. Euismod dui platea urna velit vel pellentesque egestas sed at. Interdum euismod auctor hendrerit maecenas elit. Pellentesque enim auctor tempor diam dictum. Ultrices tempus at vulputate arcu risus mauris velit. </p>
+        <p class="subtitle">Pharetra lectus sem ac tristique ac dignissim condimentum pharetra lorem. Eget convallis leo mauris vulputate cras vitae blandit velit scelerisque. Venenatis tellus vivamus leo tempus et pellentesque morbi tempus. Enim quis pharetra lectus non.</p>
     </div>
-</div>
-
-<div id="driver-container">
-    <div id="driver-prompt">
-        <h1 class="big-prompt">Got a car and wanna<br>chauffeur others?</h1>
-        <p class="subtitle">Sign up as a <span class="orange">driver</span> on HopIn and  help us to provide great value for everyone.</p>
-        <button class="long-button" mat-raised-button>request sign up -></button>
+    
+    <div id="ready">
+        <h1 class="big-prompt">Ready to <span class="orange">HopIn?</span></h1>
     </div>
-    <div id="driver-illustartion">
-        <img src="../../assets/vectors/driver.svg" height="310px" alt="">
-      </div>
-    <div id="driver-offer">
-        <h2 class="smallest-prompt">We offer you:</h2>
-        <ul class="no-bullets">
-            <li><mat-icon>watch_later</mat-icon>flexible hours</li>
-            <li><mat-icon>money</mat-icon>90% of revenue</li>
-            <li><mat-icon>mode_comment</mat-icon>live support 24/7</li>
-        </ul>
+    
+    <div id="footer">
+        <p id="footer-name">HopIn</p>
+        <p id="footer-cr">@copyright by tim13</p>
     </div>
-</div>
-
-<div id="about-us">
-    <h2 class="title dark-blue">About us</h2>
-    <p class="subtitle">Lorem ipsum dolor sit amet consectetur. Sed metus risus amet at at tellus quis aenean. Euismod dui platea urna velit vel pellentesque egestas sed at. Interdum euismod auctor hendrerit maecenas elit. Pellentesque enim auctor tempor diam dictum. Ultrices tempus at vulputate arcu risus mauris velit. </p>
-    <p class="subtitle">Pharetra lectus sem ac tristique ac dignissim condimentum pharetra lorem. Eget convallis leo mauris vulputate cras vitae blandit velit scelerisque. Venenatis tellus vivamus leo tempus et pellentesque morbi tempus. Enim quis pharetra lectus non.</p>
 </div>
