added temorary routing

--- a/HopIn/src/app/landing/landing.component.html
+++ b/HopIn/src/app/landing/landing.component.html
@@ -7,7 +7,7 @@
             <div id="pass-prompt">
                 <h1 class="big-prompt">Need a safe, quick<br>and pleasant ride?</h1>
                 <p class="subtitle">Sign up as a <span class="orange">passenger</span> on HopIn and enjoy our services anywhere, anytime.</p>
-                <button class="long-button" mat-raised-button>proceed to sign up -></button>
+                <button class="long-button" mat-raised-button [routerLink]="['/register']">proceed to sign up -></button>
             </div>
         </div>
         <div id="passanger-right">
