created account details component design, without button

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <toolbar></toolbar>
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
+  <account-details></account-details>
 </div>
