added passenger-account-update-options component for choosing informations for update

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <toolbar></toolbar>
+  <app-passenger-account-update-options></app-passenger-account-update-options>
   <router-outlet></router-outlet>
 </div>
