added favorite routes component design, without dynamic data loading

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <toolbar></toolbar>
   <!-- <router-outlet></router-outlet> -->
-  <account-details></account-details>
+  <!-- <account-details></account-details> -->
+  <favourite-routes></favourite-routes>
 </div>
