--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -1,8 +1,8 @@
 #account-container {
     width: 20%;
     position: absolute;
-    top: 30%;
-    left: 30%;
+    top: 15%;
+    left: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -79,3 +79,13 @@ p {
 
 
  /* BUTTON */
+ button {
+    width: 80%;
+    padding: 0.3em;
+    margin-top: 2rem;
+    font-family: 'Poppins', sans-serif;
+    background-color: #EBEBEB;
+    border-radius: 15px;
+    border-color: #B8B8B8;
+    color: rgba(0, 0, 0, 0.8);
+ }
