--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <toolbar></toolbar>
-  <router-outlet></router-outlet>
+  <unregistered-ride-form></unregistered-ride-form>
+  <!-- <router-outlet></router-outlet> -->
 </div>
