--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -78,3 +78,7 @@ html, body { height: 100%; margin: 0; font-family: "Poppins", sans-serif; }
     background-color: #EC9A29 !important;
 }
  
+.border {
+    border: 1px solid #E6E6E6;
+    border-radius: 10px;
+}
