--- a/HopIn/src/app/unregistered-ride-form/unregistered-ride-form.component.css
+++ b/HopIn/src/app/unregistered-ride-form/unregistered-ride-form.component.css
@@ -1,5 +1,5 @@
 #unreg-ride-container {
-    height: 270px;
+    height: 283px;
     width: 300px;
     background-color: white;
     text-align: center;
@@ -13,10 +13,6 @@ h3 {
     margin-top: 25px;
 }
 
-#find-route-btn {
-    margin-top: 5px;
-}
-
 .location-icon {
     color: #B5B5B5;
 }
@@ -26,6 +22,7 @@ mat-form-field {
     line-height: 35px;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px;
 }
 
 mat-form-field input{
@@ -37,4 +34,12 @@ mat-form-field input{
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
     padding: 3px 0px 3px 0px !important;
     border: 0px;
+}
+
+.mat-error {
+    line-height: 12px;
+}
+
+form {
+    height: fit-content;
 }
