renamed passenger-update-account-options to passenger-account-options component. Renamed passenger-account-settings to account-settings component

--- a/HopIn/src/app/account-settings/account-settings.component.css
+++ b/HopIn/src/app/account-settings/account-settings.component.css
@@ -10,7 +10,7 @@
     display: inline-block;
 }
 
-.name-form-container mat-form-field {
+.name-form-container>mat-form-field {
     width: 90%;
     margin-bottom: -5px;
 }
@@ -19,7 +19,6 @@ mat-form-field{
     display: block;
     width: 65%;
 }
-
 
 @media screen and (max-width: 1200px) {
     .profile-img-container {
@@ -32,7 +31,7 @@ mat-form-field{
         display: block;
     }
 
-    .name-form-container mat-form-field {
+    .name-form-container>mat-form-field {
         width: 65%;
         margin-bottom: 0;
     }
@@ -43,7 +42,7 @@ mat-form-field{
         width: 100%;
     }
 
-    .name-form-container mat-form-field{
+    .name-form-container>mat-form-field{
         width: 70%;
     }
 
