--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <toolbar></toolbar>
-  <app-passenger-account-settings></app-passenger-account-settings>
+  <app-account-settings></app-account-settings>
 </div>
