added account component with user details and favorite routes inside. Finished responsive design

--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -1,14 +1,11 @@
 #account-container {
-    width: 20%;
-    position: absolute;
-    top: 15%;
-    left: 10%;
+    width: 20vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
     padding: 25px 25px;
-    height: fit-content;
+    height: 60vh;
     border: 1px solid #E6E6E6;
     border-radius: 10px;
 }
@@ -82,10 +79,25 @@ p {
  button {
     width: 80%;
     padding: 0.3em;
-    margin-top: 2rem;
+    margin-top: auto;
     font-family: 'Poppins', sans-serif;
     background-color: #EBEBEB;
     border-radius: 15px;
     border-color: #B8B8B8;
     color: rgba(0, 0, 0, 0.8);
  }
+
+ @media only screen and (max-width: 900px) {
+    #account-container {
+        width: 55vw;
+    }
+
+    button {
+        font-size: 0.6em;
+    }
+
+    .data {
+        font-size: 0.6em;
+    }
+
+}
