--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div>
   <toolbar></toolbar>
   <!-- <router-outlet></router-outlet> -->
-  <!-- <account-details></account-details> -->
-  <favourite-routes></favourite-routes>
+  <app-account></app-account>
 </div>
