--- a/HopIn/src/app/favourite-routes/favourite-routes.component.html
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.html
@@ -18,12 +18,13 @@
                 <p class="value">{{ route.durationHours + "h " + route.durationMins + "min" }}</p>
             </div>
         </div>
+        
+        <div id="btnAndHeart">
+            <button></button>
 
-        <button>Schedule again</button>
-
-        <!-- <img class="favourite" src="../../assets/vectors/heart_empty.svg"> -->
-        <img class="favourite" src="../../assets/vectors/heart_red.svg">
-
+            <!-- <img class="favourite" src="../../assets/vectors/heart_empty.svg"> -->
+            <img class="favourite" src="../../assets/vectors/heart_red.svg">
+        </div>
     </div>
 
 </div>
